Fixed gap on product drawer for mobile screens

--- a/assets/custom.css
+++ b/assets/custom.css
@@ -9715,6 +9715,7 @@ body.cart-drawer-open {
   visibility: visible;
   opacity: 1;
   overflow-x: hidden;
+  overflow-y: auto;
 }
 .claim_drawer_container .claim-drawer-summary__close {
   position: absolute;
